feat(resource_pool): 资源池相关接口
